updates: improve cancellability calculation

If the state changes so no backends can cancel, we can disable the
button.

BUG: 407466